@@ -542,7 +542,8 @@ static int __ConvertDate(const char *NTDate, char *buffer, int buf_size) {
     {
       ++cur_char;
       while (*cur_char != '\'' && *cur_char != 0 && (cur_output == NULL || cur_output != end_output)) {
-        if (cur_output) { *cur_output++ = *cur_char++; }
+        if (cur_output) { *cur_output++ = *cur_char; }
+        ++cur_char;
         buf_size += 1;
       }
     }
@@ -676,7 +677,8 @@ static int __ConvertTime(const char *NTTime, char *buffer, int buf_size) {
     case '\'':
       ++cur_char;
       while (*cur_char != '\'' && *cur_char != 0 && (!cur_output || (cur_output != end_output))) {
-        if (cur_output) *cur_output++ = *cur_char++;
+        if (cur_output) *cur_output++ = *cur_char;
+        ++cur_char;
         buf_size += 1;
       }
       break;
