@@ -1,6 +1,12 @@
+2007-02-21  Francois Dumont  <dums@stlport...>
+
+	* src/c_locale_win32/c_locale_win32.c: Fixed __ConvertDate and
+	__ConvertTime to avoid potential infinite loop (bug report
+	1663604)
+
 2007-02-16  Francois Dumont  <dums@stlport...>
 
-	* STLport 5.1.1 released based on revision 2919. STLPORT_5_1_1
+	* STLport 5.1.1 released based on revision 2919. STLport-5.1.1
 	tag created.
 
 2007-02-14  Francois Dumont  <dums@stlport...>
